--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -474,6 +474,13 @@ th.desc a {
 .even {
 	background: #ffffff;
 }
+.green {
+	color: green;
+}
+
+.red {
+	color: red;
+}
 
 th:hover, tr:hover {
 	background: #E1F2B6;
